syntax = "proto3";

package labapi;

option go_package = "github.com/ethpandaops/lab/backend/pkg/api/proto";

import "google/protobuf/empty.proto";

service LabAPI {
  rpc GetFrontendConfig(google.protobuf.Empty) returns (FrontendConfigResponse) {}
}

message FrontendConfigResponse {
  
}