// Convenience exports for LabAPI service
import { labapi } from '../proto';

export const LabAPI = labapi.LabAPI;
export type LabAPI = labapi.LabAPI;

// Types
export type GetRecentLocallyBuiltBlocksRequest = labapi.GetRecentLocallyBuiltBlocksRequest;
export type GetRecentLocallyBuiltBlocksResponse = labapi.GetRecentLocallyBuiltBlocksResponse;
export type IGetRecentLocallyBuiltBlocksRequest = labapi.IGetRecentLocallyBuiltBlocksRequest;
export type IGetRecentLocallyBuiltBlocksResponse = labapi.IGetRecentLocallyBuiltBlocksResponse;
